--- a/DDGC/DDGC.vcxproj
+++ b/DDGC/DDGC.vcxproj
@@ -141,9 +141,18 @@
     <ClInclude Include="internal\sio_client_impl.h" />
     <ClInclude Include="internal\sio_packet.h" />
     <ClInclude Include="md5.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="resource1.h" />
+    <ClInclude Include="resource2.h" />
     <ClInclude Include="sio_client.h" />
     <ClInclude Include="sio_message.h" />
     <ClInclude Include="sio_socket.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ddstats.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Downloads\ddstats_icon.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
